# cffconvert

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prospector.yml  .sonarcloud.properties  .travis.yml  .zenodo.json  CHANGELOG.md  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.dev.md  README.md  README.rst  codemeta.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  sonar-project.properties
.githooks/: pre-commit
.github/workflows/: cffconvert.yml  linting.yml  testing.yml  zenodraft.yml
cff_converter_python/: __init__.py  citation.py
cffconvert/: ApalikeObject.py  BibtexObject.py  CodemetaObject.py  EndnoteObject.py  RisObject.py  SchemaorgObject.py  ZenodoObject.py  __init__.py  apalike.py  citation.py  cli.py  codemeta.py  endnote.py  fetching.py  gcloud.py  leftovers.py.txt  ris.py  root.py  schemaorg.py  version.py  zenodo.py
cffconvert/behavior_1_0_x/: apalike.py  apalike_author.py  apalike_object.py  apalike_url.py  bibtex.py  bibtex_author.py  bibtex_object.py  bibtex_url.py  citation.py  codemeta.py  codemeta_object.py  endnote.py  endnote_author.py  endnote_object.py  endnote_url.py  ris.py  ris_author.py  ris_object.py  ris_url.py  schemaorg.py  schemaorg_author.py  schemaorg_object.py  schemaorg_urls.py  zenodo.py  zenodo_creator.py  zenodo_object.py
cffconvert/behavior_1_1_x/: apalike.py  apalike_author.py  apalike_object.py  apalike_url.py  bibtex.py  bibtex_author.py  bibtex_object.py  bibtex_url.py  citation.py  codemeta.py  codemeta_object.py  endnote.py  endnote_author.py  endnote_object.py  endnote_url.py  ris.py  ris_author.py  ris_object.py  ris_url.py  schemaorg.py  schemaorg_author.py  schemaorg_object.py  schemaorg_urls.py  zenodo.py  zenodo_creator.py  zenodo_object.py
cffconvert/behavior_1_2_x/: apalike.py  apalike_author.py  apalike_object.py  apalike_url.py  bibtex.py  bibtex_author.py  bibtex_object.py  bibtex_url.py  citation.py  codemeta.py  codemeta_object.py  endnote.py  endnote_author.py  endnote_object.py  endnote_url.py  ris.py  ris_author.py  ris_object.py  ris_url.py  schemaorg.py  schemaorg_object.py  schemaorg_urls.py  zenodo.py  zenodo_creator.py  zenodo_object.py
cffconvert/behavior_shared/: abstract_author_shared.py  abstract_url_shared.py  apalike.py  apalike_author_shared.py  apalike_object_shared.py  apalike_url_shared.py  bibtex.py  bibtex_author.py  bibtex_author_shared.py  bibtex_object_shared.py  bibtex_url_shared.py  endnote.py  endnote_author_shared.py  endnote_url_shared.py  ris.py  ris_author_shared.py  ris_object_shared.py  ris_url_shared.py  schemaorg.py  schemaorg_author.py  schemaorg_author_shared.py  schemaorg_object_shared.py  schemaorg_urls_shared.py  zenodo.py  zenodo_creator.py  zenodo_creator_shared.py  zenodo_object_shared.py
cffconvert/cff_version_1_0_x/: citation.py
cffconvert/cff_version_1_1_x/: citation.py
cffconvert/cff_version_1_2_x/: citation.py
cffconvert/cli/: check_early_exits.py  cli.py  create_citation.py  rawify_github_link.py  rawify_url.py  read_from_file.py  read_from_url.py  validate_or_write_output.py
cffconvert/contracts/: citation.py
cffconvert/gcloud/: gcloud.py  index.html
citationcff/: citation.py
docs/: alternative-install-options.md  example-result-apalike.md  example-result-bibtex.md  example-result-codemeta.md  example-result-endnote.md  example-result-ris.md  example-result-schema-org.md  example-result-zenodo.md
fixtures/: bibtex-1  bibtex-2  bibtex-3  bibtex-6-no-date  bibtex-6-no-doi  cff-converter-python-codemeta-1  citationcff-1  citationcff-2  citationcff-3  codemeta-3  codemeta-5  endnote-6-no-date  endnote-6-no-doi  mcfly-bibtex-1  mcfly-citation-1  mcfly-endnote-1  mcfly-ris-1  ris-1  ris-2  ris-5  ris-6-no-date  ris-6-no-doi  ris-6-no-version  zenodojson-1  zenodojson-2
fixtures/1/: README.md  codemeta.json  endnote.txt  schema-dot-org.json  zenodo.json
fixtures/2/: codemeta.json  endnote.enw  schema-dot-org.json  zenodo.json
fixtures/3/: codemeta.json  endnote.enw  ris.txt  schema-dot-org.json  zenodo.json
fixtures/5/: bibtex.bib  codemeta.json  endnote.txt  schema-dot-org.json
fixtures/6/: CITATION.cff  bibtex-no-suspect-keys.bib  bibtex-no-version.bib  codemeta-no-date.json  codemeta-no-doi.json  codemeta-no-suspect-keys.json  codemeta-no-version.json  ris-no-suspect-keys.txt  schema-dot-org-no-date.json  schema-dot-org-no-doi.json  schema-dot-org-no-suspect-keys.json  schema-dot-org-no-version.json
fixtures/7/: CITATION.cff
fixtures/8/: CITATION.cff
livetest/: citation_test.py
livetest/01/: CitationTestInvalidInput.py  CitationTestInvalidInput01.py
livetest/02/: CitationTestUrlHasOrgRepoTreeSha02.py
livetest/03/: CitationTestUrlHasOrgRepoTreeTag03.py
livetest/04/: CitationTestUrlHasOrgRepoOnly04.py
livetest/05/: CitationTestOrgRepoTreeBranch.py
src/cffconvert/: __init__.py  citation.py  version.py
test/: BibtexObjectTestsFixture10.py  BibtexObjectTestsFixture11.py  BibtexObjectTestsFixture12.py  BibtexObjectTestsFixture9.py  citation_test.py  cli_test.py  consistency_test.py  consistent_file_naming.sh  test_consistent_file_naming.sh  test_consistent_versioning.py  test_rawify_url.py
test/01/: BibtexObjectTest01.py  CodemetaObjectTest01.py  ris.txt
test/02/: .zenodo.json  BibtexObjectTest02.py  SchemaorgObjectTest02.py  bibtex.bib
test/03/: BibtexObjectTest03.py  CodemetaObjectTest03.py
test/04/: ZenodoObjectTest04.py
test/05/: CodemetaObjectTest05.py  EndnoteObjectTest05.py
test/06/: schemaorg.json
test/07/: .zenodo.json  BibtexObjectTest07.py  CodemetaObjectTest07.py  SchemaorgObjectTest07.py  ZenodoObjectTest07.py  bibtex.bib  endnote.enw
test/08/: SchemaorgObjectTest08.py  codemeta.json  endnote.enw  schemaorg.json
test/09/: BibtexObjectTest09.py
test/1/: BibtexObjectTest1.py  EndnoteObjectTest1.py  SchemaorgObjectTest1.py  ZenodoObjectTest1.py  schemaorg.json
test/10/: BibtexObjectTest10.py  EndnoteObjectTest10.py  (+1 more)
tests/: test_consistent_versioning.py  test_rawify_url.py
(+3327 files in other folders)
