[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #

[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/#declaring-project-metadata
authors = [
    { name = "Jurriaan H. Spaaks", email = "j.spaaks@esciencecenter.nl" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Utilities"
]
dependencies = [
    "click >= 7.0, <9",
    "requests >=2.20, <3",
    "ruamel.yaml >=0.16.0",
    "pykwalify >=1.6",
    "jsonschema >=4.18.0, <5",
]
description = "Command line program to validate and convert CITATION.cff files."
keywords = [
    "citation",
    "credit",
    "CITATION.cff",
    "BibTeX",
    "EndNote",
    "RIS",
    "CodeMeta",
    "Zenodo"
]
license = {text = "Apache Software License"}
name = "cffconvert"
readme = "README.md"
requires-python = ">=3.8"
version = "3.0.0a0"

# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #

[project.urls]
Changelog = "https://github.com/citation-file-format/cffconvert/blob/main/CHANGELOG.md"
Repository = "https://github.com/citation-file-format/cffconvert"

# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #

[project.optional-dependencies]
dev = [
    "build",
    "isort == 5.12.0",
    "pre-commit",
    "prospector == 1.10.2",
    "pyroma == 4.2",
    "ruff == 0.0.278"
]
gcloud = [
    "flask"
]
publishing = [
    "twine",
    "wheel"
]
testing = [
    "pytest >= 6",
    "pytest-cov"
]

# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #

[project.scripts]
cffconvert = "cffconvert.cli.cli:cli"

# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #

[tool.setuptools.packages.find]
where = ["src"]

# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #

[tool.isort]
force_alphabetical_sort_within_sections = true
force_single_line = true
known_first_party = ["cffconvert"]
line_length = 120
lines_after_imports = 2
lines_between_sections = 0
src_paths = ["src", "tests"]

# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #

[tool.pytest.ini_options]
# Note that visual debugger in some editors like pycharm gets confused by coverage calculation.
# As a workaround, configure the test configuration in pycharm et al with a --no-cov argument
addopts = "--no-cov --verbose --maxfail=1 --strict-markers --import-mode=importlib --cache-clear --strict-config"
markers = [
    "apalike: Tests pertaining to 'apalike' export behavior",
    "bibtex: Tests pertaining to 'bibtex' export behavior",
    "cli: Tests pertaining to cffconvert's command line interface",
    "codemeta: Tests pertaining to 'codemeta' export behavior",
    "endnote: Tests pertaining to 'endnote' export behavior",
    "lib: Tests pertaining to cffconvert's library",
    "ris: Tests pertaining to 'ris' export behavior",
    "schemaorg: Tests pertaining to 'schema.org' export behavior",
    "zenodo: Tests pertaining to 'zenodo' export behavior",
]
minversion = "7.0"
pythonpath = [
    "src",
    "."
]
testpaths = [
    "tests"
]

# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "C901", "Q"]

# # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "double"
