# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Jurriaan H. Spaaks
author_email = j.spaaks@esciencecenter.nl
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
description = Validate and convert CITATION.cff files
keywords =
    citation
    credit
    CITATION.cff
    BibTeX
    EndNote
    RIS
    CodeMeta
    Zenodo
long_description = file: README.md
long_description_content_type = text/markdown
name = cffconvert
project_urls =
    Bug Tracker = https://github.com/citation-file-format/cff-converter-python/issues
url = https://github.com/citation-file-format/cff-converter-python
version = 1.3.3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    click==6.*
    requests==2.*
    ruamel.yaml==0.15.*
    pykwalify[ruamel]==1.*

[options.data_files]
# This section requires setuptools>=40.6.0
# It remains empty for now
# Check if MANIFEST.in works for your purposes

[options.entry_points]
console_scripts =
    cffconvert = cffconvert:cli

[options.extras_require]
dev =
    bump2version
    prospector[with_pyroma]
    isort
    pytest
    pytest-cov
    sphinx
    sphinx_rtd_theme
    sphinx-autoapi
publishing =
    twine
    wheel

[options.packages.find]
include = cffconvert, cffconvert.*

[coverage:run]
branch = True
source = cffconvert
omit = test/* livetest/*

[isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = my_python_package
src_paths = my_python_package,tests
line_length = 120

[tool:pytest]
testpaths = test
python_files = test/**/*Test*.py livetest/**/*Test*.py
# Note that visual debugger in some editors like pycharm gets confused by coverage calculation.
# As a workaround, configure the test configuration in pycharm et al with a --no-cov argument
addopts = --cov --cov-report xml --cov-report term --cov-report html
