# see documentation, e.g.
# - https://packaging.python.org/tutorials/packaging-projects/#configuring-metadata
# - https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html
# - https://www.python.org/dev/peps/pep-0314/

[metadata]
author = Jurriaan H. Spaaks
author_email = j.spaaks@esciencecenter.nl
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: Utilities
description = Command line program to validate and convert CITATION.cff files.
keywords =
    citation
    credit
    CITATION.cff
    BibTeX
    EndNote
    RIS
    CodeMeta
    Zenodo
long_description = file: README.md
long_description_content_type = text/markdown
name = cffconvert
project_urls =
    Bug Tracker = https://github.com/citation-file-format/cff-converter-python/issues
    Source = https://github.com/citation-file-format/cff-converter-python
url = https://github.com/citation-file-format/cff-converter-python
version = 2.0.0-alpha.0

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    # https://www.python.org/dev/peps/pep-0440/#version-specifiers
    click >=7.0, <9
    requests >=2.20, <3
    ruamel.yaml >=0.16.0
    pykwalify >=1.6
    jsonschema >=3.0, <4

[options.data_files]
# This section requires setuptools>=40.6.0
# See MANIFEST.in for the included files

[options.entry_points]
console_scripts =
    cffconvert = cffconvert.cli.cli:cli

[options.extras_require]
dev =
    prospector[with_pyroma] >= 1.4
    isort
    pytest >=6
    pytest-cov
publishing =
    twine
    wheel
gcloud =
    flask

[options.packages.find]
include = cffconvert, cffconvert.*

[coverage:run]
branch = True
source = cffconvert
omit = test/* livetest/*

[isort]
lines_after_imports = 2
force_single_line = 1
no_lines_before = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
known_first_party = cffconvert
src_paths = cffconvert,test,livetest
line_length = 120

[tool:pytest]
# Note that visual debugger in some editors like pycharm gets confused by coverage calculation.
# As a workaround, configure the test configuration in pycharm et al with a --no-cov argument
addopts = --no-cov --verbose
